--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <script>
         var i = 0;
         var isTxt1 = true; 
-        var txt1 = 'twenty-one years old'; 
+        var txt1 = 'Twenty-one years old'; 
         var txt2 = 'Majoring in Computer Science';
         var speed = 60; 
         var delay = 1000; 
